@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-07T16:19:35Z",
-  "count_outdated" : 283,
-  "uniques_outdated" : 141,
-  "count" : 298,
-  "uniques" : 150,
+  "timestamp" : "2022-08-08T01:27:20Z",
+  "count_outdated" : 286,
+  "uniques_outdated" : 142,
+  "count" : 301,
+  "uniques" : 151,
   "clones" : [
-    {
-      "timestamp": "2022-07-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-25T00:00:00Z",
       "count": 2,
@@ -56,6 +49,13 @@
     },
     {
       "timestamp": "2022-08-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
