@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2022-07-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-07-25T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -39,6 +34,11 @@
     },
     {
       "timestamp": "2022-08-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-07T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
